[wip] submitting guesses basically working

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="fishbowl">
+<html lang="en" ng-app="emojinary">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
@@ -7,7 +7,7 @@
   <script src="src/lib/angular.min.js"></script>
   <script src="src/lib/angular-route.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="src/fishbowl.js"></script>
+  <script src="src/emojinary.js"></script>
   <script src="src/SplashController.js"></script>
   <script src="src/LobbyController.js"></script>
   <script src="src/GameController.js"></script>
