added grunt to concat and minify js

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,7 @@
   <script src="src/lib/angular.min.js"></script>
   <script src="src/lib/angular-route.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="src/emojinary.js"></script>
-  <script src="src/SplashController.js"></script>
-  <script src="src/LobbyController.js"></script>
-  <script src="src/GameController.js"></script>
+  <script src="src/build.js"></script>
   <title>Emojinary</title>
 </head>
 <body>
