fixed css styling issues and minor bugs

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <h1 class="title">EMOJINARY</h1>
+    <h1 class="title">{{username.toUpperCase() || "EMOJINARY"}}</h1>
     <h2 class="score" ng-show="username">SCORE: {{score}}</h2>
   </header>
   <div class="centered-content" ng-view>
