changed name from "emojinary movies" to "mojies"... I still don't like it.

--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
   <script src="src/lib/angular-route.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="src/build.js"></script>
-  <title>Emojinary</title>
+  <title>Mojies</title>
 </head>
 <body>
   <header>
-    <h1 class="title">{{username.toUpperCase() || "EMOJINARY"}}</h1>
+    <h1 class="title">{{username.toUpperCase() || "MOJIES"}}</h1>
     <h2 class="score" ng-show="username">SCORE: {{score}}</h2>
   </header>
   <div class="centered-content" ng-view>
